<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".profilEmployeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageBackProfilEmpl"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_keyboard_backspace"
                android:tint="@color/colorWhite"
                android:layout_marginLeft="20dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/profileavatar"/>

            <TextView
                android:id="@+id/namePofileempl"

                style="@style/TextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/full_name" />
            <RatingBar
                android:id="@+id/Ratingbar"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:isIndicator="true"
                android:numStars="5" />

            <TextView
                android:id="@+id/Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rating number"
                android:textSize="18sp"
                android:textStyle="bold"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_person"
                    android:tint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username_title" />

                    <TextView
                        android:id="@+id/usernameProfilempl"

                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usernameP" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_phone_android"
                    android:tint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_title" />

                    <TextView
                        android:id="@+id/phoneProfilempl"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phoneP" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_email"
                    android:tint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title" />

                    <TextView
                        android:id="@+id/emailProfilempl"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emailP" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_location"
                    android:tint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address_title" />

                    <TextView
                        android:id="@+id/adresseProfilempl"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/modifempl"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button"
            android:text="@string/modifier_le_profile"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ajout"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button"
            android:text="ajouter rendez vous"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold"
           />
        <Button
            android:id="@+id/logoutempl"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button"
            android:text="@string/se_d_connecter"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
             />


    </LinearLayout>



</ScrollView>