<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".profilClientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageBackProfil"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_keyboard_backspace"
                android:tint="@color/colorWhite"
                android:layout_marginLeft="20dp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="55dp"
                android:src="@drawable/profileavatar" />


            <TextView
                android:id="@+id/namePofileClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/full_name"
                style="@style/TextName"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_person"
                    android:tint="@color/colorAccent"
                    android:contentDescription="TODO" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username_title" />

                    <TextView
                        android:id="@+id/usernameProfilClient"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_phone_android"
                    android:tint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_title" />

                    <TextView
                        android:id="@+id/phoneProfilClient"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_email"
                    android:tint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlackTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title" />

                    <TextView
                        android:id="@+id/emailProfilClient"
                        style="@style/TextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/modifierprofil"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button"
            android:text="@string/modifier_le_profile"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/logoutclient"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button"
            android:text="@string/se_d_connecter"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>







</ScrollView>